--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:mediarouter-v7:25.3.1'
-    compile 'com.google.android.gms:play-services-cast:10.2.6'
+    compile 'com.android.support:mediarouter-v7:25.4.0'
+    compile 'com.google.android.gms:play-services-cast-framework:10.2.1'
 }
