--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,7 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:mediarouter-v7:25.4.0'
-    compile 'com.google.android.gms:play-services-cast-framework:10.2.1'
+    compile 'com.google.android.gms:play-services-cast-framework:11.0.0'
+    compile 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
